add ability to create room on homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My index</title>
+    <title>Yell.io</title>
     <!-- inject:css -->
     <link rel="stylesheet" href="/styles/style.css">
     <!-- endinject -->
