--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="/scripts/controllers/home.js"></script>
     <script src="/scripts/controllers/room.js"></script>
     <script src="/scripts/directives/localVideo.js"></script>
+    <script src="/scripts/directives/remoteVideo.js"></script>
     <script src="/scripts/services/ngRTC.js"></script>
     <script src="/scripts/services/rtc.js"></script>
     <script src="/scripts/services/socket.js"></script>
